fix: Adjust spacing between cards

--- a/assets/css/cover.css
+++ b/assets/css/cover.css
@@ -210,7 +210,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  border: 1px solid;
+  /*border: 1px solid;*/
 }
 
 .front {
@@ -227,7 +227,14 @@ body {
 /* back, initially hidden pane */
 .back {
   transform: rotateY(180deg);
-  background: linear-gradient(to right, rgba(255,0,0,0), rgba(255,0,0,0.5));
+  /*background: linear-gradient(to right, rgba(203,0,0,0), rgba(255,0,0,0.5));*/
+}
+.card {
+  background: linear-gradient(to right, rgba(203,67,53,0), rgba(203,67,53,0.5));
+}
+
+.projImg {
+  width: 100%;
 }
 
 /* Link animation */
